--- a/index.html
+++ b/index.html
@@ -261,6 +261,13 @@ body {
         <h2>💖 A Final Wish</h2>
         <p>
             May your life always be filled with warmth, kindness, and moments that make your heart smile.
+            You deserve all the happiness in the world, today and always. Happy Birthday, Divya 🎉💕.
+            Nenu happy ga undadaniki nuvvu kuda oka main reason. Naku nuvvu chesina chinna chinna help eh chala precious.
+            Thank you for being a part of my life. Neeku unna badhalu complete ga thaggipoyi happiness matrame undalani korukuntunnanu.
+            Neeku prathi vishayamlonu best istano ledo telidu but edo oka way aalochinchi try chestanu.
+            But one thing thanks for being the best friend to me forever.
+            Andariki ela untundo telidu kani naku nee meeda ekkuva care, love and affection untundi.
+            Once again Happy Birthady for my best friend ever! 🎂🎉💖.
         </p>
         <button class="close-btn" onclick="closeFinalWish()">Close ✨</button>
     </div>
