--- a/index.html
+++ b/index.html
@@ -266,8 +266,7 @@ body {
             Thank you for being a part of my life. Neeku unna badhalu complete ga thaggipoyi happiness matrame undalani korukuntunnanu.
             Neeku prathi vishayamlonu best istano ledo telidu but edo oka way aalochinchi try chestanu.
             But one thing thanks for being the best friend to me forever.
-            Andariki ela untundo telidu kani naku nee meeda ekkuva care, love and affection untundi.
-            Once again Happy Birthady for my best friend ever! 🎂🎉💖.
+            Not bothered about others but I do have more care, love and affection on you. 🎂🎉💖.
         </p>
         <button class="close-btn" onclick="closeFinalWish()">Close ✨</button>
     </div>
