--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@ body {
     <!-- Wish -->
     <div id="wishSection">
         <h1>🎉 Happy Birthday 🎂</h1>
-        <h2> Divya 💖💝 </h2>
+        <h2> Dear Friend 💖💝 </h2>
         <p>May your day be filled with love, laughter, and endless happiness 💖</p>
     </div>
 
@@ -261,7 +261,7 @@ body {
         <h2>💖 A Final Wish</h2>
         <p>
             May your life always be filled with warmth, kindness, and moments that make your heart smile.
-            You deserve all the happiness in the world, today and always. Happy Birthday, Divya 🎉💕.
+            You deserve all the happiness in the world, today and always. Happy Birthday, Dear friend 🎉💕.
             Nenu happy ga undadaniki nuvvu kuda oka main reason. Naku nuvvu chesina chinna chinna help eh chala precious.
             Thank you for being a part of my life. Neeku unna badhalu complete ga thaggipoyi happiness matrame undalani korukuntunnanu.
             Neeku prathi vishayamlonu best istano ledo telidu but edo oka way aalochinchi try chestanu.
