--- a/index.html
+++ b/index.html
@@ -260,13 +260,13 @@ body {
     <div class="modal">
         <h2>💖 A Final Wish</h2>
         <p>
-            Happy Birthday, Divya 🎉💕.
+            Happy Birthday, Divya 🎂💕.
             May your life always be filled with warmth, kindness, and moments that make your heart smile.
             You deserve all the happiness in the world, today and always. 
             Nenu happy ga undadaniki nuvvu kuda oka main reason. Naku nuvvu chesina chinna chinna help eh chala precious.
             Thank you for being a part of my life. Neeku unna badhalu complete ga thaggipoyi happiness matrame undalani korukuntunnanu.
             But one thing thanks for being the best friend to me forever.
-            Not bothered about others but I do have more care, love and affection on you. 🎂🎉💖.
+            Not bothered about others but I do have more care, love and affection on you. 🤍💖.
         </p>
         <button class="close-btn" onclick="closeFinalWish()">Close ✨</button>
     </div>
