--- a/index.html
+++ b/index.html
@@ -266,7 +266,8 @@ body {
             Nenu happy ga undadaniki nuvvu kuda oka main reason. Naku nuvvu chesina chinna chinna help eh chala precious.
             Thank you for being a part of my life. Neeku unna badhalu complete ga thaggipoyi happiness matrame undalani korukuntunnanu.
             But one thing thanks for being the best friend to me forever.
-            Not bothered about others but I do have more care, love and affection on you. 🤍💖.
+            nuvvu chese prathi pani ki oka well wisher laga eppudu supportive ga untanu.
+            Andari gurinchi telidu but naku nee meeda ekkuva care, love and affection undi. 🤍💖.
         </p>
         <button class="close-btn" onclick="closeFinalWish()">Close ✨</button>
     </div>
