--- a/index.html
+++ b/index.html
@@ -264,9 +264,9 @@ body {
             May your life always be filled with warmth, kindness, and moments that make your heart smile.
             You deserve all the happiness in the world, today and always. 
             Nenu happy ga undadaniki nuvvu kuda oka main reason. Naku nuvvu chesina chinna chinna help eh chala precious.
-            Thank you for being a part of my life. Neeku unna badhalu complete ga thaggipoyi happiness matrame undalani korukuntunnanu.
+            Thank you for being a part of my life. Neekunna badhalu completega thaggipoyi happiness matrame undalani korukuntunnanu.
             But one thing thanks for being the best friend to me forever.
-            nuvvu chese prathi pani ki oka well wisher laga eppudu supportive ga untanu.
+            Nuvvu chese prathi pani ki oka well wisher laga eppudu supportive ga untanu.
             Andari gurinchi telidu but naku nee meeda ekkuva care, love and affection undi. 🤍💖.
         </p>
         <button class="close-btn" onclick="closeFinalWish()">Close ✨</button>
