--- a/index.html
+++ b/index.html
@@ -236,7 +236,8 @@ body {
         <p>
             Happy Birthday, Divya 🎂💕.
             May your life always be filled with warmth, kindness, and moments that make your heart smile.
-            You deserve all the happiness in the world, today and always. 
+            You deserve all the happiness in the world, today and always.
+            You are the bestest friend I have found in my recent times and also in my life.
             Nenu happy ga undadaniki nuvvu kuda oka main reason. Naku nuvvu chesina chinna chinna help eh chala precious.
             Thank you for being a part of my life. Nee life antha only happiness undalani korukuntunnanu.
             But one thing thanks for being the best friend to me forever.
