Update Quote 4 text for clarity

--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@ body {
         <button class="quote-btn" onclick="showQuote('“You’re not just special today — you’re special every single day. 🤍✨”')">Quote 1</button>
         <button class="quote-btn" onclick="showQuote('“You deserve all the love this world can give and even more. 💕🌍”')">Quote 2</button>
         <button class="quote-btn" onclick="showQuote('“May your day be filled with people who love you deeply — just the way you deserve. 💝✨”')">Quote 3</button>
-        <button class="quote-btn" onclick="showQuote('“You’re one of the rare souls who make everything around them better. Keep shining. ✨❤️”')">Quote 4</button>
+        <button class="quote-btn" onclick="showQuote('“You’re one of the rare souls who make everything around them better. Keep shining always. ✨❤️”')">Quote 4</button>
         <button class="quote-btn" onclick="showQuote('“Thank you for being the kind of friend who stays, cares, and understands. You mean so much. 💖🤗”')">Quote 5</button>
         <div id="quoteBox"></div>
     </div>
